[package]
name = "fdc1004"
version = "0.1.0"
edition = "2021"
description = "Driver for the FDC1004 by Texas Instruments"
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"
defmt = {version="0.3.8", optional=true}
defmt-rtt = {version="0.4", optional=true}
bitfield-struct = "0.8.0"

[features]
defmt = ["dep:defmt"]
